add eslint check badge

--- a/.github/workflows/eslint-check.yml
+++ b/.github/workflows/eslint-check.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: myfunctionname
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
