--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,6 +1,8 @@
 version: "2"         # required to adjust maintainability checks
 exclude_patterns:
 - "backend_project/"
+- "frontend_project/public/js/popper.min.js"
+- "frontend_project/public/js/bootstrap.min.js"
 checks:
   argument-count:
     config:
